TESTS = \
	lsrc-dotfiles-dirs.t \
	lsrc-excludes.t \
	lsrc-hostname.t \
	lsrc-sigils.t \
	lsrc.t \
	lsrc-symlink-dirs.t \
	lsrc-tags.t \
	lsrc-usage.t \
	mkrc-alternate-dotfiles-dir.t \
	mkrc-copy-file.t \
	mkrc-host-file.t \
	mkrc-hostname.t \
	mkrc-simple-output.t \
	mkrc-symlink-dirs.t \
	mkrc-tagged-file.t \
	mkrc-usage.t \
	rcrc-custom.t \
	rcrc-hostname.t \
	rcrc.t \
	rcup-link-files.t \
	rcup-hostname.t \
	rcup-symlink-dirs.t \
	rcup-usage.t

dist_check_SCRIPTS = $(TESTS)

LOG_COMPILER = cram
